--- a/TestOutput/TestngReport/index.html
+++ b/TestOutput/TestngReport/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Selenium测试报告">
-                    <span>D:\King\EclipseFX\Selenium\src\test\java\TestReportXml\TestngReport.xml</span>
+                    <span>C:\Users\King-liu\AppData\Local\AutomationTestSystem\app\Selenium\src\test\java\TestReportXml\TestngReport.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -149,7 +149,7 @@
         </div> <!-- panel Selenium测试报告 -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\King\EclipseFX\Selenium\src\test\java\TestReportXml\ExtentReport.xml</span>
+            <span class="header-content">C:\Users\King-liu\AppData\Local\AutomationTestSystem\app\Selenium\src\test\java\TestReportXml\ExtentReport.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +168,7 @@
         </div> <!-- panel -->
         <div panel-name="test-xml-Selenium测试报告" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\King\EclipseFX\Selenium\src\test\java\TestReportXml\TestngReport.xml</span>
+            <span class="header-content">C:\Users\King-liu\AppData\Local\AutomationTestSystem\app\Selenium\src\test\java\TestReportXml\TestngReport.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -272,11 +272,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'case2')
 data.setCell(0, 2, 'TestCases.SearchProcess')
-data.setCell(0, 3, 6940);
+data.setCell(0, 3, 6949);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'case1')
 data.setCell(1, 2, 'TestCases.SearchProcess')
-data.setCell(1, 3, 955);
+data.setCell(1, 3, 949);
 window.suiteTableData['Selenium测试报告']= { tableData: data, tableDiv: 'times-div-Selenium测试报告'}
 return data;
 }
@@ -347,15 +347,15 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">case1</span>
-                <span class="method-start">2569 ms</span>
+                <span class="method-start">2708 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">case2</span>
-                <span class="method-start">3524 ms</span>
+                <span class="method-start">3658 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">10465 ms</span>
+                <span class="method-start">10608 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
